# cmake

CMakeLists/: demo01.txt
demo01/: CMakeLists.txt  MathFunctions.c  MathFunctions.h  config.h.in  main.cpp  使用.txt
demo01/include/: config.h  config.h.in
demo01/math/: CMakeLists.txt  MathFunctions2.cpp  MathFunctions2.h
